src/main/java/com/example/storeprojectstep1/errors/exception/Exception404.java
package com.example.storeprojectstep1.errors.exception;

public class Exception404 extends RuntimeException {
    public Exception404(String msg) {
        super(msg);
    }
}